<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".DetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/your_name"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/what_nickname_suits_my_personality"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nickname_suits_my_personality"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/my_name_in_your_phone"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/my_name_in_phone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/words_about_me"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/words_about_me"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/if_you_got_a_chance_to_ask_me_something_about_my_personal_life"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/got_a_chance"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/what_s_the_bravest_thing_you_ve_ever_done_in_the_last_year"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bravest_thing"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/describe_in_one_word_life_is"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/describe_one_word"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/describe_in_one_word_love_is"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/describe_love_is"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/how_do_you_feel_when_you_talk_to_me"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/how_you_feel_when_youtalk"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/your_first_reaction_on_my_first_look"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reaction_first_look"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/relation_between_you_and_me"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/relation_between_you_me"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/if_you_had_three_wishes_for_me_what_would_it_be"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/three_wishes"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/any_name_you_would_like_to_call_me"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/like_to_call_me"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/one_thing_that_u_love_the_most_about_me"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/one_thing_u_love"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape"
                android:editable="false"
                android:paddingLeft="10dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
